hphp/hack/test/typecheck/super_constraint_10.php.exp
File "super_constraint_10.php", line 19, characters 34-38:
Invalid argument (Typing[4110])
File "super_constraint_10.php", line 16, characters 14-16:
This is a value of generic type Tk1
File "super_constraint_10.php", line 17, characters 14-16:
It is incompatible with a value of generic type Tk2
